--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -315,7 +315,7 @@
         }
 
         .text-block {
-            margin-bottom: 20px; /* Space between paragraphs */
+            margin-bottom: 50px; /* Space between paragraphs */
         }
 
         @media (max-width: 768px) {
@@ -334,7 +334,7 @@
             }
 
             .text-block {
-                margin-bottom: 15px; /* Adjust spacing for smaller screens */
+                margin-bottom: 45px; /* Adjust spacing for smaller screens */
             }
         }
 
@@ -357,6 +357,15 @@
                 padding: 10px; /* Add consistent padding for aesthetics */
             }
         }
+
+        #section25 {
+            margin-bottom: 40px; /* Increase spacing below image */
+        }
+
+        #section26 {
+            flex-shrink: 0; /* Prevents it from being squeezed */
+        }
+
 
 
 
@@ -672,7 +681,7 @@
             </div>
             
             <!-- Section 26 -->
-            <div class="text-block" id="section26"style="margin-top: -25px;"> 
+            <div class="text-block" id="section26"style="margin-top: 20px;"> 
                 Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
                 Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
             </div>                    
