--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -363,7 +363,8 @@
         }
 
         #section26 {
-            flex-shrink: 0; /* Prevents it from being squeezed */
+            flex-shrink: 0;
+            margin-bottom: 40px; /* Prevents it from being squeezed */
         }
 
 
@@ -680,15 +681,13 @@
                 <img src="https://manuelbanza.github.io/Artigos/Escolas_Vivas_Interactivo//images/piloto_arroios.png" alt="Piloto Arroios" style="width: 100%; max-height: 500px; object-fit: cover; margin-bottom: 20px;">
             </div>
             
-               
+            <!-- Section 26 -->
+            <div class="text-block" id="section26"style="margin-top: -25px;"> 
+                Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
+                Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
+            </div>                    
         </div>
     </div>
-
-    <!-- Section 26 -->
-    <div class="text-block" id="section26"style="margin-top: -25px;"> 
-        Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
-        Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
-    </div>     
 
     <!-- Section 27 -->
     <div class="section" id="section23" style="background-color: #fffaf1; display: flex; justify-content: center; align-items: center; height: 30vh; margin-bottom: -20px;">
