--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -682,11 +682,11 @@
             </div>
 
                    
-            <!-- Section 26 -->
-            <div class="text-block" id="section26"style="margin-top: -50px;"> 
-                Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
-                Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
-            </div>                    
+                <!-- Section 26 -->
+                <div class="text-block" id="section26"style="margin-bottom: 5px;"> 
+                    Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
+                    Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
+                </div>                    
         </div>
     </div>
 
