--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -306,18 +306,16 @@
         }
 
         .content-container {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: wrap;
-            align-items: flex-start;
-            justify-content: flex-start;
-        }
-        #section26 {
-            flex-shrink: 0; /* Prevents it from being squeezed */
+            max-width: 800px;
+            margin: 0 auto;
+            line-height: 1.8;
+            font-size: 1.2em;
+            color: #18224C;
+            text-align: justify;
+            display: block; /* Prevents flex from squeezing sections */
             min-height: auto;
-            padding: 20px;
+            overflow: visible;
         }
-
 
         .text-block {
             margin-bottom: 40px; /* Space between paragraphs */
