--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -367,11 +367,15 @@
 
         #section26 {
             display: block;
-            min-height: auto; /* Ensure it expands as needed */
+            width: 100%; /* Ensures it takes full width of the parent */
+            max-width: 800px; /* Match the image’s max width */
+            margin: 0 auto; /* Center it */
             padding: 10px;
             background-color: #fffaf1;
-            overflow: visible; /* Ensure text is not hidden */
+            overflow: visible;
+            text-align: justify; /* Ensure text alignment matches */
         }
+
 
 
 
