--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -362,20 +362,16 @@
         }
 
         #section25 {
-            margin-bottom: 10px; /* Increase spacing below image */
+            margin-bottom: 40px; /* Increase spacing below image */
         }
 
         #section26 {
             display: block;
-            width: 100%; /* Ensures it takes full width of the parent */
-            max-width: 800px; /* Match the image’s max width */
-            margin: 0 auto; /* Center it */
+            min-height: auto; /* Ensure it expands as needed */
             padding: 10px;
             background-color: #fffaf1;
-            overflow: visible;
-            text-align: justify; /* Ensure text alignment matches */
+            overflow: visible; /* Ensure text is not hidden */
         }
-
 
 
 
@@ -707,11 +703,6 @@
     <div class="section continuous-text-section" id="background-section-2blocks" style="margin-top: -25px;">
         <div class="content-container">
 
-            <!-- Section 26 -->
-            <div class="text-block" id="section26" style="margin-top: 20px; padding: 20px; background-color: #fffaf1;"> 
-                Apesar do potencial, este programa enfrenta desafios como a falta de experiência administrativa local.
-                Com a descentralização em curso — com municípios assumindo funções do Ministério da Educação — é o momento ideal para avançar. Recomenda-se capacitar os atores locais, definir a governança, criar processos claros de decisão e de monitorização contínua. Promover a colaboração entre cooperativas e escolas para evitar sobrecarga dos serviços municipais.
-            </div>
 
             <!-- Section 28 -->
             <div class="text-block" id="section28" style="margin-top: -25px;">
