--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -703,6 +703,10 @@
     <div class="section continuous-text-section" id="background-section-2blocks" style="margin-top: -25px;">
         <div class="content-container">
 
+            <!-- Section 26 -->
+            <div class="text-block" id="section26" style="margin-top: 20px; padding: 20px; background-color: #fffaf1;"> 
+                Os custos de manter a escola aberta podem ser cobertos pelo aluguer acessível de espaços, gerando receita suficiente para a sustentabilidade do programa.
+            </div>
 
             <!-- Section 28 -->
             <div class="text-block" id="section28" style="margin-top: -25px;">
