--- a/Escolas_Vivas_Interactivo/mapa_escolas_vivas_mensagem.html
+++ b/Escolas_Vivas_Interactivo/mapa_escolas_vivas_mensagem.html
@@ -74,7 +74,7 @@
         .chapter, .section, .yellow-section {
             position: relative;
             z-index: 1;
-            height: 100vh;
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -100,6 +100,11 @@
         .chapter1 {
             background-color: #35b591;
         }
+
+        #chapter1 {
+            padding-top: 100px;
+        }
+
         .chapter2 {
             background-color: #f68187;
         }
@@ -351,6 +356,15 @@
                 padding: 10px; /* Add consistent padding for aesthetics */
             }
         }
+
+        .image-container img {
+            position: static !important;
+            left: auto !important;
+            transform: none !important;
+            max-width: 100% !important;
+            height: auto !important;
+        }
+
 
 
 
