--- a/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
+++ b/Escolas_Vivas_Interactivo/Artigo_Escolas_Vivas_Mensagem.html
@@ -234,6 +234,12 @@
         }
 
 
+        @media (min-width: 1024px) {
+            #section11 .image-container img {
+                max-width: 60% !important; /* Reduce width */
+                height: auto !important;
+            }
+        }
 
 
 
@@ -285,7 +291,13 @@
             transform: translateX(-50%); /* Compensate for the image's width to center it perfectly */
         }
 
-
+        @media (min-width: 1024px) {
+            #section11 .image-container img,
+            #section14 .image-container img {
+                max-width: 60% !important; /* Reduce width */
+                height: auto !important;
+            }
+        }
 
 
         #section14 .text-box-container {
@@ -650,9 +662,6 @@
 
 
 
-    <!-- Blank Section -->
-    <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
-
     
 
     <!-- New Background Section (Continuous Text Flow - Part 2) -->
@@ -672,8 +681,7 @@
         </div>
     </div>
 
-    <!-- Blank Section -->
-    <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
+
 
     <!-- Section 23 -->
     <div class="section" id="section23" style="background-color: #fffaf1; display: flex; justify-content: center; align-items: center; height: 80vh; margin-bottom: -20px;">
@@ -725,9 +733,6 @@
         </div>
     </div>
     
-    <!-- Blank Section -->
-    <div class="section" id="final" style="background-color: #fffaf1; height: 10vh; margin: 0; padding: 0;"></div>
-
     <!-- Final Block with 3 Sections -->
     <div class="section continuous-text-section" id="final-block" style="background-color: #E2E0D0; padding: 40px 20px;">
         <div class="content-container" style="text-align: center;">
